- FieldFactory produce fields by tag and value - Use FieldFactory in FixMessageBuilderImpl - Use field type enums in integration tests - Use FixedPointNumber when generating quote - Update Readme